[Add] account type buttons

--- a/Client/src/assets/styling/components/_generalStyling.scss
+++ b/Client/src/assets/styling/components/_generalStyling.scss
@@ -984,6 +984,19 @@ p {
   }
 }
 
+.account-btn {
+  border: 1px solid $bg-light-gray;
+
+  &:hover {
+    cursor: pointer;
+    border: 1px solid transparent;
+    background-image: linear-gradient($bg-main, $bg-main),
+      linear-gradient(to bottom, rgb(13, 63, 241), rgb(13, 63, 241, 0.2));
+    background-origin: border-box;
+    background-clip: padding-box, border-box;
+  }
+}
+
 .nav-hamburger-icon {
   display: flex;
   flex-direction: column;
