--- a/Client/src/assets/styling/components/_generalStyling.scss
+++ b/Client/src/assets/styling/components/_generalStyling.scss
@@ -1073,6 +1073,32 @@ p {
   }
 }
 
+.border-button {
+  width: 100%;
+  padding: 8px;
+  color: $text-main;
+  border: 2px solid $el-border-gray;
+  background-color: $el-bg-gray;
+  border-radius: 10px;
+  resize: none;
+  font-family: map-get($font-text-light, font-family);
+  font-weight: map-get($font-text-light, font-weight);
+  font-size: 0.9rem;
+}
+
+.border-button-active {
+  width: 100%;
+  padding: 8px;
+  transition: all 0.2s ease-in-out;
+  outline: none;
+  border: 2px solid transparent;
+  background-image: linear-gradient($el-border-gray-focus, $el-border-gray-focus),
+    linear-gradient(to bottom, rgb(13, 63, 241), rgb(13, 63, 241, 0.2));
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+  border-radius: 10px;
+}
+
 // Visibility
 .hide {
   visibility: none;
