--- a/Client/src/assets/styling/components/_generalStyling.scss
+++ b/Client/src/assets/styling/components/_generalStyling.scss
@@ -1198,7 +1198,7 @@ p {
 }
 
 .border-gr-blue {
-  border: 1px solid transparent;
+  border: 2px solid transparent;
   background-image: linear-gradient($bg-main, $bg-main),
     linear-gradient(to bottom, rgb(13, 63, 241), rgb(13, 63, 241, 0.2));
   background-origin: border-box;
@@ -1211,6 +1211,15 @@ p {
     linear-gradient(to bottom, rgb(168, 13, 241), rgb(247, 0, 169, 0.5), rgb(255, 128, 0, 0.1));
   background-origin: border-box;
   background-clip: padding-box, border-box;
+}
+
+.gray-line-vertical {
+  background: linear-gradient(
+    to bottom,
+    rgba(62, 62, 62, 0) 0%,
+    rgba(62, 62, 62, 0.5) 50%,
+    rgba(62, 62, 62, 0) 100%
+  );
 }
 
 // Cursors
